apps/navidrome/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: navidrome
  labels:
    app.kubernetes.io/name: navidrome
    app.kubernetes.io/instance: navidrome
    pod-security.kubernetes.io/enforce: restricted
