apps/navidrome/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: navidrome
  labels:
    app.kubernetes.io/name: navidrome
    app.kubernetes.io/instance: navidrome
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: navidrome
      app.kubernetes.io/instance: navidrome
  template:
    metadata:
      labels:
        app.kubernetes.io/name: navidrome
        app.kubernetes.io/instance: navidrome
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: "4533"
        prometheus.io/scrape: "true"
    spec:
      serviceAccountName: navidrome
      automountServiceAccountToken: false
      enableServiceLinks: false
      nodeSelector:
        disk: local
      securityContext:
        runAsUser: 1001
        runAsGroup: 1001
        fsGroup: 1001
        fsGroupChangePolicy: OnRootMismatch
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: navidrome
          image: docker.io/deluan/navidrome
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 4533
              protocol: TCP
          volumeMounts:
            - name: navidrome
              mountPath: /data
              subPath: data
            - name: navidrome
              mountPath: /music
              subPath: library/apple-music
              readOnly: true
            - name: navidrome
              mountPath: /backup
              subPath: backup
            - name: config
              mountPath: /data/navidrome.toml
              subPath: navidrome.toml
              readOnly: true
            - name: tmp
              mountPath: /tmp
          resources:
            requests:
              cpu: 150m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 1536Mi
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          startupProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 3
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 30
          livenessProbe:
            httpGet:
              path: /ping
              port: http
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /ping
              port: http
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
      volumes:
        - name: config
          configMap:
            name: navidrome
        - name: navidrome
          persistentVolumeClaim:
            claimName: navidrome
        - name: tmp
          emptyDir: {}
  strategy:
    type: Recreate
