apps/navidrome/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: navidrome
  labels:
    app.kubernetes.io/name: navidrome
    app.kubernetes.io/instance: navidrome
spec:
  ipFamilyPolicy: PreferDualStack
  selector:
    app.kubernetes.io/name: navidrome
    app.kubernetes.io/instance: navidrome
  ports:
    - name: navidrome
      protocol: TCP
      port: 4533
      targetPort: http
